--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-hans">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link crossorigin="anonymous" integrity="sha384-fJH2gz4kcHl6LNRYI7TauVxjt5r/u+NfM+XpXDSSyHTCS7PMUXXW0Qo677Xr+bok" href="https://lib.baomitu.com/font-awesome/5.11.2/css/all.css" rel="stylesheet">
     <title>主页|静网未来</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -15,12 +15,12 @@
             <h1>静网未来</h1>
 
             <div id="icon-menu">
-                <span>menu</span>
-                <span>search</span>
+                    <a id="nav-search-btn" title="search"><i class="fas fa-search"></i></a>
+                    <a id="nav-list-btn" title="list"><i class="fas fa-list-ul"></i></a>
             </div>
         </div>
 
-        <div class="nav-wrapper">
+        <div id="nav-wrapper">
 
             <nav>
                 <ul>
@@ -43,6 +43,9 @@
         <article>
             <header>
                 <h1>Lorem ipsum dolor sit amet.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                     Cumque, aliquam Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, deleniti.
+                </p>
             </header>
 
             <div class="article-sections">
@@ -103,11 +106,12 @@
                 </ul>
             </section>
         </aside>
-
     </main>
 
     <footer>
-        &copy; JINGWANGnet 2013-2019
+        <p>
+           &copy; JINGWANGnet 2013-2019
+        </p>
     </footer>
 </body>
 
