--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div id="nav-wrapper">
 
-            <nav>
+            <nav id="nav-menu">
                 <ul>
                     <li><a href="#">item 1</a></li>
                     <li><a href="#">item 2</a></li>
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
 
-            <form action="/search/" method="post" id="search">
+            <form action="/search/" method="post" id="nav-search">
                 <label for="nav-search">search</label>
                 <input type="search" name="search" id="nav-search" placeholder="search anything">
             </form>
@@ -114,21 +114,27 @@
         </p>
     </footer>
     <script>
-        window.onload = initAll;
+        // window.onload = initAll;
+        window.addEventListener('load', initAll);
+        
 
         function initAll() {
-            btnSwith('#nav-search-btn', '#search')
-
+            btnSwith('#nav-search-btn', '#nav-search')
+            btnSwith('#nav-list-btn', '#nav-menu')
         }
 
         function btnSwith(btn, obj) {
-            let b = document.querySelector(btn);
-            let o = document.querySelector(obj);
+            let button = document.querySelector(btn);
+            let toDisplayElement = document.querySelector(obj);
 
-            b.addEventListener('click', () => {
-                b.classList.toggle("active");
-                o.classList.toggle("active");
-            });
+            if (toDisplayElement && button) {
+                button.addEventListener('click', () => {
+                    button.classList.toggle("active");
+                    toDisplayElement.classList.toggle("active");
+                });
+            } else {
+                console.log(`${obj} is toDisplayElement: ${toDisplayElement}`);
+            }
         }
 
     </script>
