--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <div id="logo">
-            <h1>静网未来</h1>
+            <h1><a href="/">静网未来</a></h1>
 
             <div id="icon-menu">
-                    <a id="nav-search-btn" title="search"><i class="fas fa-search"></i></a>
-                    <a id="nav-list-btn" title="list"><i class="fas fa-list-ul"></i></a>
+                    <a id="nav-search-btn" class="btn" title="search"><i class="fas fa-search"></i></a>
+                    <a id="nav-list-btn" class="btn" title="list"><i class="fas fa-list-ul"></i></a>
             </div>
         </div>
 
@@ -24,16 +24,15 @@
 
             <nav id="nav-menu">
                 <ul>
-                    <li><a href="#">item 1</a></li>
-                    <li><a href="#">item 2</a></li>
-                    <li><a href="#">item 3</a></li>
-                    <li><a href="#">item 4</a></li>
+                    <li><a href="/" class="list-link">home</a></li>
+                    <li><a href="/blog/" class="list-link">blog</a></li>
+                    <li><a href="/about" class="list-link">about</a></li>
                 </ul>
             </nav>
 
             <form action="/search/" method="post" id="nav-search">
-                <label for="nav-search">search</label>
-                <input type="search" name="search" id="nav-search" placeholder="search anything">
+                <label for="search">search</label>
+                <input type="search" name="search" results="4" id="search" placeholder="search!">
             </form>
 
         </div>
