Rewrite displayFlex mixin

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </p>
             </header>
 
-            <div class="article-sections">
+            <div id="sections-wrapper">
                 <section>
                     <h2>博客</h2>
                     <ul>
