--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
                 <section>
                     <h2>博客</h2>
                     <ul>
-                        <li><a href="#">aritcle 1</a></li>
-                        <li><a href="#">aritcle 2</a></li>
-                        <li><a href="#">aritcle 3</a></li>
-                        <li><a href="#">aritcle 4</a></li>
+                        <li><a href="#" class="list-link">aritcle 1</a></li>
+                        <li><a href="#" class="list-link">aritcle 2</a></li>
+                        <li><a href="#" class="list-link">aritcle 3</a></li>
+                        <li><a href="#" class="list-link">aritcle 4</a></li>
                     </ul>
                 </section>
 
                 <section>
                     <h2>项目</h2>
                     <ul>
-                        <li><a href="#">aritcle 1</a></li>
-                        <li><a href="#">aritcle 2</a></li>
-                        <li><a href="#">aritcle 3</a></li>
-                        <li><a href="#">aritcle 4</a></li>
+                        <li><a href="#" class="list-link">aritcle 1</a></li>
+                        <li><a href="#" class="list-link">aritcle 2</a></li>
+                        <li><a href="#" class="list-link">aritcle 3</a></li>
+                        <li><a href="#" class="list-link">aritcle 4</a></li>
                     </ul>
                 </section>
 
@@ -72,7 +72,7 @@
         </article>
 
         <aside>
-            <section id="aside-info">
+            <section id="aside-info" class="box-shadow">
                 <figure>
                     <img src="img/avatar/i.png" alt="avatar">
                     <figcaption><b>jing.wang</b></figcaption>
