--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
     <main>
         <article>
             <header>
-                <h1>Lorem ipsum dolor sit amet.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                     Cumque, aliquam Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, deleniti.
-                </p>
+                <h1>记录 简单 生活</h1>
+                <p>关注 Linux  Python  但不是程序员</p>
             </header>
 
             <div id="sections-wrapper">
@@ -71,7 +69,7 @@
         </article>
 
         <aside>
-            <section id="aside-info" class="box-shadow">
+            <section id="aside-info" class="box-shadow bg-logo" >
                 <figure>
                     <img src="img/avatar/i.png" alt="avatar">
                     <figcaption><b>jing.wang</b></figcaption>
