修改：     css/basic.css 	修改：     css/index.css 	修改：     index.html 	修改：     scss/_tag.scss 	修改：     scss/index.scss

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <article>
                 <header>
                     <h1>记录 简单 生活</h1>
-                    <p>关注 Linux Python 但不是程序员</p>
+                    <p>关注 Linux Python， 见习魔法师。</p>
                 </header>
     
                 <div id="sections-wrapper">
