--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <ul class="aside-info-ul">
                     <li>
                         <span class="sign" title="邮箱"><i class="fas fa-envelope"></i></span>
-                        <a href="mailto:admin@jingwangnet.com" target="_blank">
-                            <span class="aisde-info-li">admin#jingwangnet.com</span>
+                        <a href="mailto:hi@jingwan.me" target="_blank">
+                            <span class="aisde-info-li">hi#jingwang.me</span>
                         </a>
                     </li>
                     <li>
