--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <ul class="aside-info-ul">
                     <li>
                         <span class="sign" title="邮箱"><i class="fas fa-envelope"></i></span>
-                        <a href="mailto:hi@jingwan.me" target="_blank">
+                        <a href="mailto:hi@jingwang.me" target="_blank">
                             <span class="aisde-info-li">hi#jingwang.me</span>
                         </a>
                     </li>
