--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     
         </main>
         <aside>
-            <section id="aside-info" class="box-shadow bg-logo">
+            <section id="aside-info" class="box-shadow ">
                 <figure>
                     <img src="img/avatar/i.png" alt="avatar">
                     <figcaption><b>jing.wang</b></figcaption>
