--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
             <div id="icon-menu">
                     <a id="nav-search-btn" class="btn" title="search"><i class="fas fa-search"></i></a>
-                    <a id="nav-list-btn" class="btn" title="list"><i class="fas fa-list-ul"></i></a>
             </div>
         </div>
 
@@ -26,6 +25,8 @@
                 <ul>
                     <li><a href="/" class="list-link">home</a></li>
                     <li><a href="/blog/" class="list-link">blog</a></li>
+                    <li><a href="/about" class="list-link">about</a></li>
+                    <li><a href="/about" class="list-link">about</a></li>
                     <li><a href="/about" class="list-link">about</a></li>
                 </ul>
             </nav>
